tests/NormalTests/paczka1/fuzzy1/95520307.err
Error in line 2: A382 A382 3Í2
Error in line 1: A382 A291 40,5
Error in line 6: XobnwODyO S48 5,3
Error in line 16: XobnwODyO A382 65,1
Error in line 19: XobnwODyO S48 27,3
Error in line 23: 31y7DLwu1cO A382 49,6
Error in line 21: l1zajXdB S48 28,0
Error in line 3: A382 A382 2,4
Error in line 22: XobnwODyO S544 10,0
Error in line 25: 31y7DLwu1cO A291 30,5
